PopupToast: Fix text overload
[Problem] Whole text is not visible in Toast Popup widget.
[Solution] Raise max-height of ui-popup-content class to show one more line of text.

--- a/src/css/profile/wearable/changeable/theme-circle/popup.less
+++ b/src/css/profile/wearable/changeable/theme-circle/popup.less
@@ -379,7 +379,7 @@
 			.ui-popup-wrapper {
 				.ui-popup-content {
 					padding: 0 19 * @unit_base;
-					max-height: 96 * @unit_base;
+					max-height: 128 * @unit_base;
 					color: @color_toast_popup_small_text;
 					font-size: 24 * @unit_base;
 					line-height: 32 * @unit_base;
